# flood-contracts

./: .gas-snapshot  .gitignore  .gitmodules  CHANGELOG.md  README.md  bun.lockb  foundry.toml  package.json  remappings.txt  slither.config.json
.github/workflows/: ci.yml  lint.yml  release.yml
bindings/rust/: Cargo.toml
bindings/typescript/: np-config.json  package-lock.json  package.json
lib/solmate/: package-lock.json
python/: copy_abis.py  setup.py
python/flood_contract_abi/: flood_abis.py
rust-bindings/: Cargo.toml
rust-bindings/src/: erc20.rs  flood_plain.rs  i_auth_zone.rs  i_signature_transfer.rs  i_zone.rs  lib.rs  shared_types.rs  zone.rs
script/: AllKnowingOracle.s.sol  BetterScript.s.sol  Book.s.sol  BookSingleChain.s.sol  Create2Deploy.sol  DecoderWithRegistry.s.sol  Deploy.s.sol  FloodPlain.s.sol  FloodPlainComplete.s.sol  FloodPlainFull.s.sol  FloodPlainL2.s.sol  FloodRegistry.s.sol  MainZone.s.sol  Zone.s.sol
src/: AllKnowingOracle.sol  Book.sol  BookSingleChain.sol  EncodedCalls.sol  FloodPlain.sol  FloodRegistry.sol  Fulfiller.sol  OnChainOrders.sol  Zone.sol
src/decoders/: IDecoder.sol  README.md
src/executors/: IExecutor.sol  README.md
src/flood-plain/: FloodPlain.sol  FloodPlainComplete.sol  FloodPlainFull.sol  FloodPlainL2.sol  IFloodPlain.sol  README.md
src/fulfiller/: Fulfiller.sol  IFulfiller.sol  README.md
src/interfaces/: IAuthZone.sol  (+12 more)
test/: BaseFixture.sol  BookSingleChain.t.sol  Duplicates.t.sol  EncodedCalls.t.sol  FloodPlain.t.sol  Hooks.t.sol  LEB128.t.sol  OnChainOrders.t.sol  OrderHash.t.sol  Zone.t.sol
(+228 files in other folders)
